--- a/Dissertation/part_evaluation.tex
+++ b/Dissertation/part_evaluation.tex
@@ -3,6 +3,65 @@
 
 \section{Таблица обыкновенная} \label{sect3_1}
 
+Так размещается таблица:
+
+\begin{table} [htbp]
+  \centering
+  \changecaptionwidth\captionwidth{15cm}
+  \caption{Название таблицы}\label{Ts0Sib}%
+  \begin{tabular}{| p{3cm} || p{3cm} | p{3cm} | p{4cm}l |}
+  \hline
+  \hline
+  Месяц   & \centering $T_{min}$, К & \centering $T_{max}$, К &\centering  $(T_{max} - T_{min})$, К & \\
+  \hline
+  Декабрь &\centering  253.575   &\centering  257.778    &\centering      4.203  &   \\
+  Январь  &\centering  262.431   &\centering  263.214    &\centering      0.783  &   \\
+  Февраль &\centering  261.184   &\centering  260.381    &\centering     $-$0.803  &   \\
+  \hline
+  \hline
+  \end{tabular}
+\end{table}
+
+\begin{table} [htbp]% Пример записи таблицы с номером, но без отображаемого наименования
+	\centering
+	\parbox{9cm}{% чтобы лучше смотрелось, подбирается самостоятельно
+        \captiondelim{}% должен стоять до самого пустого caption
+        \caption{}%
+        \label{tbl:test1}%
+        \begin{SingleSpace}
+    	\begin{tabular}{ | c | c | c | c |}
+    	\hline
+    	Оконная функция	& ${2N}$ & ${4N}$	& ${8N}$	\\ \hline
+    	Прямоугольное 	& 8.72 	 & 8.77		& 8.77		\\ \hline
+    	Ханна		& 7.96 	 & 7.93		& 7.93		\\ \hline
+    	Хэмминга	& 8.72 	 & 8.77		& 8.77		\\ \hline
+    	Блэкмана	& 8.72 	 & 8.77		& 8.77		\\ \hline
+    	\end{tabular}%
+    	\end{SingleSpace}
+	}
+\end{table}
+
+Таблица \ref{tbl:test2} "--- пример таблицы, оформленной в~классическом книжном варианте или~очень близко к~нему. \mbox{ГОСТу} по~сути не~противоречит. Можно ещё~улучшить представление, с~помощью пакета \verb|siunitx| или~подобного.
+
+\begin{table} [htbp]%
+    \centering
+	\caption{Наименование таблицы, очень длинное наименование таблицы, чтобы посмотреть как оно будет располагаться на~нескольких строках и~переноситься}%
+	\label{tbl:test2}% label всегда желательно идти после caption
+    \renewcommand{\arraystretch}{1.5}%% Увеличение расстояния между рядами, для улучшения восприятия.
+    \begin{SingleSpace}
+	\begin{tabular}{@{}@{\extracolsep{20pt}}llll@{}} %Вертикальные полосы не используются принципиально, как и лишние горизонтальные (допускается по ГОСТ 2.105 пункт 4.4.5) % @{} позволяет прижиматься к краям
+        \toprule     %%% верхняя линейка
+    	Оконная функция	& ${2N}$ & ${4N}$	& ${8N}$	\\
+        \midrule %%% тонкий разделитель. Отделяет названия столбцов. Обязателен по ГОСТ 2.105 пункт 4.4.5 
+    	Прямоугольное 	& 8.72 	 & 8.77		& 8.77		\\
+    	Ханна		& 7.96 	 & 7.93		& 7.93		\\
+    	Хэмминга	& 8.72 	 & 8.77		& 8.77		\\
+    	Блэкмана	& 8.72 	 & 8.77		& 8.77		\\
+        \bottomrule %%% нижняя линейка
+	\end{tabular}%
+   	\end{SingleSpace}
+\end{table}
+
 %\newpage
 %============================================================================================================================
 
